Fix range slider cursor on Firefox.

--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ input[type="range"]::-moz-range-thumb {
   border-radius: 100%;
   height: 20px;
   width: 20px;
+  cursor: pointer;
   border: 4px solid var(--secondary);
 }
 
